// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render question box not logged in 1`] = `
<div>
  <div
    className="MuiPaper-root-1 MuiPaper-shadow0-3 MuiPaper-rounded-2"
    style={
      Object {
        "height": "100%",
        "padding": 15,
      }
    }
  >
    <div
      className="MuiFormControl-root-28"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-37 MuiInputLabel-root-32 MuiInputLabel-formControl-33 MuiInputLabel-animated-35"
        htmlFor={undefined}
      >
        Title
      </label>
      <div
        className="MuiInput-root-41 MuiInput-formControl-42 MuiInput-inkbar-43 MuiInput-underline-49"
      >
        <input
          aria-required={undefined}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-45 MuiInput-inputSingleline-52"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          rows={undefined}
          type="text"
          value=""
        />
      </div>
    </div>
    <hr
      className="MuiDivider-root-55 MuiDivider-default-56"
    />
    <div>
      <div
        style={
          Object {
            "marginBottom": 15,
          }
        }
      >
        <div
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          <button
            className="MuiButtonBase-root-74 MuiButton-root-60 MuiButton-flatPrimary-63"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-62"
            >
              save
            </span>
            <span
              className="MuiTouchRipple-root-76"
            />
          </button>
          <button
            className="MuiButtonBase-root-74 MuiButton-root-60"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-62"
            >
              cancel
            </span>
            <span
              className="MuiTouchRipple-root-76"
            />
          </button>
        </div>
      </div>
      <div>
        <div />
      </div>
      <hr
        className="MuiDivider-root-55 MuiDivider-default-56"
      />
      <div>
        <div
          className="MuiGrid-typeContainer-83 MuiGrid-spacing-xs-16-98"
        >
          <div
            className="MuiGrid-typeItem-84 MuiGrid-grid-xs-6-107"
          >
            <div
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <button
                className="MuiButtonBase-root-74 MuiIconButton-root-166"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-172"
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-175 MuiIconButton-icon-173"
                  >
                    thumb_up
                  </span>
                  <span
                    style={
                      Object {
                        "fontSize": 14,
                        "marginLeft": 5,
                      }
                    }
                  />
                </span>
                <span
                  className="MuiTouchRipple-root-76"
                />
              </button>
            </div>
            <div
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <button
                className="MuiButtonBase-root-74 MuiIconButton-root-166"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-172"
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-175 MuiIconButton-icon-173"
                  >
                    thumb_down
                  </span>
                  <span
                    style={
                      Object {
                        "fontSize": 14,
                        "marginLeft": 5,
                      }
                    }
                  />
                </span>
                <span
                  className="MuiTouchRipple-root-76"
                />
              </button>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-84 MuiGrid-grid-xs-6-107"
          >
            <div
              style={
                Object {
                  "paddingTop": 5,
                  "textAlign": "right",
                }
              }
            >
               – 
              <p
                className="MuiTypography-root-182 MuiTypography-body1-191"
                style={
                  Object {
                    "color": "#1f3b99",
                    "display": "inline-block",
                  }
                }
              >
                sheldon
              </p>
              <span
                className="MuiTypography-root-182 MuiTypography-caption-192"
                style={
                  Object {
                    "display": "inline-block",
                    "marginLeft": 5,
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-typeContainer-83 MuiGrid-spacing-xs-16-98 MuiGrid-justify-xs-flex-end-94"
  >
    <div
      className="MuiGrid-typeItem-84 MuiGrid-grid-xs-12-113"
      style={
        Object {
          "background": "white",
          "paddingLeft": 15,
          "paddingRight": 15,
        }
      }
    >
      <ul
        className="MuiList-root-204 MuiList-padding-205 Comments"
      />
    </div>
  </div>
</div>
`;

exports[`render question logged in 1`] = `
<div>
  <div
    className="MuiPaper-root-1 MuiPaper-shadow0-3 MuiPaper-rounded-2"
    style={
      Object {
        "height": "100%",
        "padding": 15,
      }
    }
  >
    <div
      className="MuiFormControl-root-28"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <label
        className="MuiFormLabel-root-37 MuiInputLabel-root-32 MuiInputLabel-formControl-33 MuiInputLabel-animated-35"
        htmlFor={undefined}
      >
        Title
      </label>
      <div
        className="MuiInput-root-41 MuiInput-formControl-42 MuiInput-inkbar-43 MuiInput-underline-49"
      >
        <input
          aria-required={undefined}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-45 MuiInput-inputSingleline-52"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          rows={undefined}
          type="text"
          value=""
        />
      </div>
    </div>
    <hr
      className="MuiDivider-root-55 MuiDivider-default-56"
    />
    <div>
      <div
        style={
          Object {
            "marginBottom": 15,
          }
        }
      >
        <div
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          <button
            className="MuiButtonBase-root-74 MuiButton-root-60 MuiButton-flatPrimary-63"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-62"
            >
              save
            </span>
            <span
              className="MuiTouchRipple-root-76"
            />
          </button>
          <button
            className="MuiButtonBase-root-74 MuiButton-root-60"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="button"
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-62"
            >
              cancel
            </span>
            <span
              className="MuiTouchRipple-root-76"
            />
          </button>
        </div>
      </div>
      <div>
        <div />
      </div>
      <hr
        className="MuiDivider-root-55 MuiDivider-default-56"
      />
      <div>
        <div
          className="MuiGrid-typeContainer-83 MuiGrid-spacing-xs-16-98"
        >
          <div
            className="MuiGrid-typeItem-84 MuiGrid-grid-xs-6-107"
          >
            <div
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <button
                className="MuiButtonBase-root-74 MuiIconButton-root-166"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-172"
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-175 MuiIconButton-icon-173"
                  >
                    thumb_up
                  </span>
                  <span
                    style={
                      Object {
                        "fontSize": 14,
                        "marginLeft": 5,
                      }
                    }
                  />
                </span>
                <span
                  className="MuiTouchRipple-root-76"
                />
              </button>
            </div>
            <div
              style={
                Object {
                  "display": "inline-block",
                }
              }
            >
              <button
                className="MuiButtonBase-root-74 MuiIconButton-root-166"
                disabled={false}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
                role="button"
                tabIndex="0"
                type="button"
              >
                <span
                  className="MuiIconButton-label-172"
                >
                  <span
                    aria-hidden="true"
                    className="material-icons MuiIcon-root-175 MuiIconButton-icon-173"
                  >
                    thumb_down
                  </span>
                  <span
                    style={
                      Object {
                        "fontSize": 14,
                        "marginLeft": 5,
                      }
                    }
                  />
                </span>
                <span
                  className="MuiTouchRipple-root-76"
                />
              </button>
            </div>
          </div>
          <div
            className="MuiGrid-typeItem-84 MuiGrid-grid-xs-6-107"
          >
            <div
              style={
                Object {
                  "paddingTop": 5,
                  "textAlign": "right",
                }
              }
            >
               – 
              <p
                className="MuiTypography-root-182 MuiTypography-body1-191"
                style={
                  Object {
                    "color": "#1f3b99",
                    "display": "inline-block",
                  }
                }
              >
                sheldon
              </p>
              <span
                className="MuiTypography-root-182 MuiTypography-caption-192"
                style={
                  Object {
                    "display": "inline-block",
                    "marginLeft": 5,
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="MuiGrid-typeContainer-83 MuiGrid-spacing-xs-16-98 MuiGrid-justify-xs-flex-end-94"
  >
    <div
      className="MuiGrid-typeItem-84 MuiGrid-grid-xs-12-113"
      style={
        Object {
          "background": "white",
          "paddingLeft": 15,
          "paddingRight": 15,
        }
      }
    >
      <ul
        className="MuiList-root-204 MuiList-padding-205 Comments"
      />
      <div
        style={
          Object {
            "height": 36,
            "marginBottom": 10,
          }
        }
      >
        <button
          className="MuiButtonBase-root-74 MuiButton-root-60 MuiButton-flatPrimary-63 MuiButton-dense-61"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          role="button"
          style={
            Object {
              "float": "right",
            }
          }
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-62"
          >
            Comment
          </span>
          <span
            className="MuiTouchRipple-root-76"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
